@@ -514,6 +514,7 @@ Other memory:
 	* Fix errors in timeslice calculation (several places)
 	* Added missing irqrestore() in timer_deletall().
 	* close() was not closing the underlying device.
+	* Added fsync()
 	* Started m68322
 </pre></ul>
 
