@@ -42,7 +42,7 @@ AOBJS		= $(ASRCS:.S=$(OBJEXT))
 
 CSRCS		= fs_open.c fs_close.c fs_read.c fs_write.c fs_ioctl.c fs_dup.c \
 		  fs_opendir.c fs_closedir.c fs_readdir.c fs_readdirr.c \
-		  fs_seekdir.c fs_telldir.c fs_rewinddir.c fs_files.c \
+		  fs_seekdir.c fs_telldir.c fs_rewinddir.c fs_fsync.c fs_files.c \
 		  fs_inode.c fs_inodefind.c fs_inodefinddir.c fs_inodereserve.c \
 		  fs_inoderemove.c fs_registerdriver.c fs_unregisterdriver.c \
 		  fs_registerblockdriver.c fs_unregisterblockdriver.c \
