@@ -135,5 +135,6 @@
 	* Fix errors in timeslice calculation (several places)
 	* Added missing irqrestore() in timer_deletall().
 	* close() was not closing the underlying device.
+	* Added fsync()
 	* Started m68322
 
